// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeInput /> renders 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_1"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="field_1"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with a custom ID 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="foo"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="foo"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with an error 1`] = `
<div
  class="field field--erroneous"
>
  <label
    class="field__label field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Jawn
  </label>
  <input
    aria-labelledby="field_4_label field_4_error"
    class="field__input field__input--erroneous"
    id="field_4"
    type="time"
    value="10:22"
  />
  <span
    class="field__error"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<TimeInput /> renders with custom requiredIndicator 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_11"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="field_11"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with help 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_5"
  >
    Jawn
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
  <input
    class="field__input"
    id="field_5"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with inline 1`] = `
<div
  class="field field--inline"
>
  <label
    class="field__label field__label--inline"
    for="field_12"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--inline"
    id="field_12"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with large 1`] = `
<div
  class="field field--large"
>
  <label
    class="field__label field__label--large"
    for="field_8"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--large"
    id="field_8"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with required 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_10"
  >
    Jawn
    <span
      class="field__required-indicator"
    >
      *
    </span>
  </label>
  <input
    aria-required="true"
    class="field__input"
    id="field_10"
    required=""
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with small 1`] = `
<div
  class="field field--small"
>
  <label
    class="field__label field__label--small"
    for="field_9"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--small"
    id="field_9"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with success 1`] = `
<div
  class="field field--success"
>
  <label
    class="field__label field__label--success"
    for="field_6"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--success"
    id="field_6"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders with touched 1`] = `
<div
  class="field field--touched field--success"
>
  <label
    class="field__label field__label--touched field__label--success"
    for="field_7"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--touched field__input--success"
    id="field_7"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders without a label 1`] = `
<div
  class="field"
>
  <input
    class="field__input"
    id="field_2"
    type="time"
    value="10:22"
  />
</div>
`;

exports[`<TimeInput /> renders without a wrapper 1`] = `
<label
  class="field__label"
  for="field_3"
>
  Jawn
</label>
`;
